@@ -300,7 +300,7 @@ static int resource_used(void *resource_id)
                              ((link_CM02_t) resource_id)->constraint);
 }
 
-static int action_free(surf_action_t action)
+static int action_unref(surf_action_t action)
 {
   action->refcount--;
   if (!action->refcount) {
@@ -314,7 +314,7 @@ static int action_free(surf_action_t action)
   return 0;
 }
 
-static void action_use(surf_action_t action)
+static void action_ref(surf_action_t action)
 {
   action->refcount++;
 }
@@ -667,8 +667,8 @@ static void surf_network_model_init_internal(void)
   surf_network_model = surf_model_init();
 
   surf_network_model->name = "network";
-  surf_network_model->action_free = action_free;
-  surf_network_model->action_use = action_use;
+  surf_network_model->action_unref = action_unref;
+  surf_network_model->action_ref = action_ref;
   surf_network_model->action_cancel = action_cancel;
   surf_network_model->action_recycle = action_recycle;
 
