@@ -313,7 +313,7 @@ static int resource_used(void *resource_id)
   return 0;                     /* We don't care */
 }
 
-static int action_free(surf_action_t action)
+static int action_unref(surf_action_t action)
 {
   action->refcount--;
   if (!action->refcount) {
@@ -325,7 +325,7 @@ static int action_free(surf_action_t action)
   return 0;
 }
 
-static void action_use(surf_action_t action)
+static void action_ref(surf_action_t action)
 {
   action->refcount++;
 }
@@ -530,8 +530,8 @@ static void surf_network_model_init_internal(void)
   surf_network_model = surf_model_init();
 
   surf_network_model->name = "network GTNetS";
-  surf_network_model->action_use = action_use;
-  surf_network_model->action_free = action_free;
+  surf_network_model->action_ref = action_ref;
+  surf_network_model->action_unref = action_unref;
   surf_network_model->action_cancel = action_cancel;
   surf_network_model->action_recycle = action_recycle;
   surf_network_model->action_change_state = action_change_state;
