@@ -35,7 +35,7 @@ surf_model_t surf_model_init(void)
     xbt_swag_new(xbt_swag_offset(action, state_hookup));
   model->resource_set = xbt_dict_new();
 
-  model->action_free = int_die_impossible_paction;
+  model->action_unref = int_die_impossible_paction;
   model->action_cancel = void_die_impossible_paction;
   model->action_recycle = void_die_impossible_paction;
 
