@@ -109,26 +109,26 @@ void test(char *platform)
             xbt_swag_extract(surf_cpu_model->common_public->
                              states.failed_action_set))) {
       DEBUG1("\t * Failed : %p", action);
-      action->model_type->common_public->action_free(action);
+      action->model_type->common_public->action_unref(action);
     }
     while ((action =
             xbt_swag_extract(surf_cpu_model->common_public->
                              states.done_action_set))) {
       DEBUG1("\t * Done : %p", action);
-      action->model_type->common_public->action_free(action);
+      action->model_type->common_public->action_unref(action);
     }
     DEBUG0("\t Network actions");
     while ((action =
             xbt_swag_extract(surf_network_model->common_public->
                              states.failed_action_set))) {
       DEBUG1("\t * Failed : %p", action);
-      action->model_type->common_public->action_free(action);
+      action->model_type->common_public->action_unref(action);
     }
     while ((action =
             xbt_swag_extract(surf_network_model->common_public->
                              states.done_action_set))) {
       DEBUG1("\t * Done : %p", action);
-      action->model_type->common_public->action_free(action);
+      action->model_type->common_public->action_unref(action);
     }
 
   } while (surf_solve() >= 0.0);
